# mashinka

./: .env-example  .gitignore  Cargo.toml  LICENSE  README.md
src/: command.rs  commands.rs  config.rs  grow.rs  lib.rs  main.rs
src/command/: deploy.rs  help.rs  index.rs  publish.rs  version.rs
src/commands/: help.rs  index.rs  publish.rs  unknown.rs
src/grow/: builder.rs  draft_post.rs  lang.rs  post.rs  serdes.rs
src/grow/serdes/: grow_draft_deserializer.rs  grow_post_serializer.rs
src/grow/templates/: draft_post.tpl  post.tpl  ru_en_mapping.tpl  translation.tpl  translation_index.tpl
src/post/: Post.rs
tests/: common.rs  index_test.rs  test_help_command.rs  test_index_command.rs  test_publish_command.rs  test_version_command.rs
