[package]
name = "mashinka"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
dotenv = "0.15.0"
chrono = "0.4.23"
thiserror = "1.0.38"
regex = "1.7.1"
flate2 = { version = "1.0.25", features = ["zlib"], default-features = false }
tar = "0.4.38"
ureq = "2.6.2"
colored = "2.0.0"

[dev-dependencies]
assert_fs = "1.0.10"
test_bin = "0.4.0"

# structopt ?
# color ?